# GARS

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  test
examples/: solution.gars
include/: ast.hpp  ast_visitor.hpp  parser.hpp  table.hpp  token.hpp  type.hpp  visitor.hpp
old/: compiler.cpp
old/ast/: ast.cpp  ast.hpp  code.cpp  old_ast.hpp
old/parser/: parser.cpp  parser.hpp
src/: codegen.cpp  compiler.cpp  lexer.cpp  visitor.cpp
src/ast/: ast.cpp  ast.hpp  code.cpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
tests/: test.cpp  test2.cpp  test2.ll
tests/examples/: solution.gars
tests/samples/: test1.gars
